seccion home casi lista, faltan detalles

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,15 +1,18 @@
 $fondo: #004a99;
 
-$fondo_oscuro: #00428a;
+$fondo_oscuro: #1445b3;
 /*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/ 
 
 $fondo_claro: #ecf5ff;
 
 $acentos: #007bff;
+
+$resaltado: #74b5fc;
 /*---botones, links----*/
 
 $fuentegeneral: "Open Sans", sans-serif;
 
 $fuentetitulos: "Montserrat", sans-serif;
+
 
  
