--- a/estilo/all.css
+++ b/estilo/all.css
@@ -11,18 +11,84 @@ body a {
 
 .fondoblanco {
   background-color: white;
-  color: #00428a;
+  color: #1445b3;
 }
 
 .fondoceleste {
   background-color: #ecf5ff;
-  color: #00428a;
+  color: #1445b3;
 }
 
-/*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/
-/*---botones, links----*/
 #home {
-  background: pink;
+  background: #1445b3;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 600px;
+}
+#home img {
+  padding: 50px 50px 0px 50px;
+  height: auto;
+  width: 80vw;
+}
+#home h1 {
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  text-align: center;
+  font-size: 188%;
+  font-weight: bolder;
+}
+#home .solutions {
+  color: #74b5fc;
+  text-decoration: underline;
+}
+#home .button-get-started {
+  display: flex;
+  justify-content: center;
+}
+#home .button-get-started button {
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+  margin-top: 25px;
+  border: solid #007bff 1px;
+  border-radius: 56px 56px 56px 56px;
+  background-color: #007bff;
+  color: white;
+  font-size: 49%;
+  width: 144px;
+  height: 45px;
+  font-weight: bold;
+  transition: background-color 0.3s linear;
+}
+#home .button-get-started button:hover {
+  cursor: pointer;
+  background-color: #1445b3;
+  border: solid white 2px;
+}
+#home .button-our-services {
+  display: flex;
+  justify-content: center;
+}
+#home .button-our-services button {
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+  margin-top: 25px;
+  border: solid white 2px;
+  border-radius: 56px 56px 56px 56px;
+  background-color: #1445b3;
+  color: white;
+  font-size: 49%;
+  width: 144px;
+  height: 45px;
+  font-weight: bold;
+  transition: background-color 0.3s linear;
+}
+#home .button-our-services button:hover {
+  cursor: pointer;
+  background-color: #007bff;
+  border: solid #007bff;
 }
 
 /*# sourceMappingURL=all.css.map */
