--- a/all.scss
+++ b/all.scss
@@ -4,7 +4,7 @@
 @import './sass/layout/home02';
 @import './sass/layout/footer08';
 @import './sass/sections/aboutus03';
-@import './sass/sections/services04';
+@import 'sections/services04';
 @import './sass/sections/porftolio05';
 @import './sass/sections/team06';
 @import './sass/sections/dropdown07';
