--- a/estilo/all.css
+++ b/estilo/all.css
@@ -21,7 +21,72 @@ body a {
 }
 
 #team {
-  background: violet;
+  height: 1000px;
+  background: #ecf5ff;
+}
+#team header {
+  color: black;
+}
+#team header h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 250%;
+  text-align: center;
+}
+#team header h2 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 90%;
+  font-weight: 400;
+  text-align: center;
+}
+#team .card01 {
+  border-radius: 50%;
+  width: 350px;
+  height: 350px;
+  background: url("../imagenes/team-01.jpg");
+  margin: auto;
+  transition: 0.5s ease-in;
+  position: relative;
+}
+#team .card01 .fondoazul {
+  background: #004a99;
+  border-radius: 50%;
+  width: 350px;
+  height: 350px;
+  margin: auto;
+  transition: 0.2s ease-in;
+  opacity: 0;
+}
+#team .card01 .fondoazul:hover {
+  opacity: 0.6;
+}
+#team .card01 .text {
+  position: absolute;
+  top: 130px;
+  left: 115px;
+}
+#team .card01 .text .t01 {
+  text-align: center;
+  color: white;
+}
+#team .card01 .text .t01 h1 {
+  font-size: 110%;
+  margin: auto;
+}
+#team .card01 .text .t01 h2 {
+  font-size: 70%;
+}
+#team .card01 .text .tredes {
+  padding-top: 5px;
+  text-align: center;
+  color: white;
+}
+#team .card01 .text .tredes i:hover {
+  color: #007bff;
+  cursor: pointer;
+  opacity: 1;
+}
+#team .card01 .text:hover {
+  opacity: 1;
 }
 
 /*# sourceMappingURL=all.css.map */
