--- a/sass/sections/_team06.scss
+++ b/sass/sections/_team06.scss
@@ -1,3 +1,83 @@
 #team{
-    background: violet;
+    height: 1000px;
+    background: $fondo_claro;
+    header{
+        color:black;
+        h1{
+            font-family: $fuentetitulos;
+            font-size: 250%;
+            text-align: center;
+            
+        }
+        h2{
+            font-family:$fuentegeneral;
+            font-size: 90%;
+            font-weight: 400;
+            text-align: center;
+        }
+    }
+    .card01{
+        border-radius: 50%;
+        width: 350px;
+        height: 350px;
+        background: url("../imagenes/team-01.jpg");
+        margin:auto;
+        transition: 0.5s ease-in;
+        position:relative;
+
+        .fondoazul{
+            background: $fondo;
+            border-radius: 50%;
+            width: 350px;
+            height: 350px;
+            margin:auto;
+            transition: 0.2s ease-in;
+            opacity:0;
+           
+            
+            &:hover{
+                opacity:0.6;
+            }
+        }
+        .text{
+            position:absolute;
+            top: 130px;
+            left:115px;
+            .t01{
+                text-align: center;
+                color:white;
+                h1{
+                    font-size: 110%;
+                    margin:auto;
+                }
+                h2{
+                    font-size: 70%;
+                }
+            }
+            .tredes{
+                padding-top:5px;
+                text-align: center;
+                color: white;
+                i{
+                    &:hover{
+                        color:$acentos;
+                        cursor:pointer;
+                        opacity: 1;
+                    }
+                }
+            }
+            &:hover{
+              opacity:1;  
+            }
+        }
+        
+        
+            
+
+
+            
+            
+        
+        
+    }
 }
