--- a/estilo/all.css
+++ b/estilo/all.css
@@ -58,7 +58,8 @@ body a {
   font-size: 49%;
   width: 144px;
   height: 45px;
-  font-weight: bold;
+  font-weight: 700;
+  letter-spacing: 1px;
   transition: background-color 0.3s linear;
 }
 #home .button-get-started button:hover {
@@ -82,7 +83,8 @@ body a {
   font-size: 49%;
   width: 144px;
   height: 45px;
-  font-weight: bold;
+  font-weight: 700;
+  letter-spacing: 1px;
   transition: background-color 0.3s linear;
 }
 #home .button-our-services button:hover {
