--- a/estilo/all.css
+++ b/estilo/all.css
@@ -24,19 +24,21 @@ body a {
   display: flex;
   flex-direction: column;
   background: #ecf5ff;
-  width: 87vw;
-  height: 2000px;
+  width: 100vw;
+  height: 1500px;
 }
 #services .sub04 {
   text-align: center;
-  padding: 20px 5px 50px 5px;
+  padding: 50px 5px 50px 5px;
   display: inline-block;
   width: 87vw;
 }
 #services .sub04 h1 {
   font-family: "Montserrat", sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 233%;
+  color: #283d50;
+  margin: 0px;
 }
 #services .sub04 h2 {
   display: inline-block;
@@ -44,6 +46,7 @@ body a {
   font-weight: 400;
   font-size: 108%;
   width: 77vw;
+  color: #556877;
 }
 #services .t01 {
   display: flex;
@@ -58,6 +61,7 @@ body a {
   overflow: hidden;
   transition: all 0.3s ease-out;
   margin-bottom: 40px;
+  color: #283d50;
 }
 #services .t01 h1 {
   font-family: "Montserrat", sans-serif;
@@ -65,6 +69,7 @@ body a {
   font-size: 130%;
   margin-left: 50px;
   transition: all 0.5s ease-out;
+  margin-bottom: 5px;
 }
 #services .t01 .t01sub {
   display: flex;
@@ -110,6 +115,7 @@ body a {
   font-size: 130%;
   margin-left: 50px;
   transition: all 0.5s ease-out;
+  margin-bottom: 5px;
 }
 #services .t02 .t02sub {
   display: flex;
@@ -155,6 +161,7 @@ body a {
   font-size: 130%;
   margin-left: 50px;
   transition: all 0.5s ease-out;
+  margin-bottom: 5px;
 }
 #services .t03 .t03sub {
   display: flex;
@@ -200,6 +207,7 @@ body a {
   font-size: 130%;
   margin-left: 50px;
   transition: all 0.5s ease-out;
+  margin-bottom: 5px;
 }
 #services .t04 .t04sub {
   display: flex;
@@ -245,6 +253,7 @@ body a {
   font-size: 130%;
   margin-left: 50px;
   transition: all 0.5s ease-out;
+  margin-bottom: 5px;
 }
 #services .t05 .t05sub {
   display: flex;
@@ -290,6 +299,7 @@ body a {
   font-size: 130%;
   margin-left: 50px;
   transition: all 0.5s ease-out;
+  margin-bottom: 5px;
 }
 #services .t06 .t06sub {
   display: flex;
