--- a/sass/sections/_services04.scss
+++ b/sass/sections/_services04.scss
@@ -2,18 +2,20 @@
     display: flex;
     flex-direction: column;
     background: $fondo_claro;
-    width: 87vw;
-    height: 2000px;
+    width: 100vw;
+    height: 1500px;
     .sub04{
         text-align: center;
-        padding: 20px 5px 50px 5px;
+        padding: 50px 5px 50px 5px;
         display: inline-block;
         width: 87vw;
 
         h1{
             font-family: $fuentetitulos;
-            font-weight: 400;
+            font-weight: 500;
             font-size: 233%; 
+            color: #283d50;
+            margin: 0px;
         }
         h2{
             display:inline-block;
@@ -21,6 +23,7 @@
             font-weight: 400;
             font-size: 108%;
             width: 77vw;
+            color: #556877;
         }
     }
     .t01{
@@ -36,12 +39,14 @@
         overflow: hidden;
         transition: all 0.3s ease-out;
         margin-bottom: 40px;
+        color: #283d50;
         h1{
             font-family: $fuentetitulos;
             flex-direction: column;
             font-size: 130%;
             margin-left:50px;
             transition: all 0.5s ease-out;
+            margin-bottom: 5px;
         }
         .t01sub{
             display: flex;
@@ -52,6 +57,7 @@
                 font-size: 90%;
                 margin-left:50px;
                 line-height: 1.6;
+                
             }
             .iconify{
                 color:red;
@@ -89,6 +95,7 @@
             font-size: 130%;
             margin-left:50px;
             transition: all 0.5s ease-out;
+            margin-bottom: 5px;
         }
         .t02sub{
             display: flex;
@@ -136,6 +143,7 @@
             font-size: 130%;
             margin-left:50px;
             transition: all 0.5s ease-out;
+            margin-bottom: 5px;
         }
         .t03sub{
             display: flex;
@@ -183,6 +191,7 @@
             font-size: 130%;
             margin-left:50px;
             transition: all 0.5s ease-out;
+            margin-bottom: 5px;
         }
         .t04sub{
             display: flex;
@@ -230,6 +239,7 @@
             font-size: 130%;
             margin-left:50px;
             transition: all 0.5s ease-out;
+            margin-bottom: 5px;
         }
         .t05sub{
             display: flex;
@@ -277,6 +287,7 @@
             font-size: 130%;
             margin-left:50px;
             transition: all 0.5s ease-out;
+            margin-bottom: 5px;
         }
         .t06sub{
             display: flex;
