--- a/sass/layout/_footer08.scss
+++ b/sass/layout/_footer08.scss
@@ -88,3 +88,43 @@
         }
     }
 } 
+
+@include desktop {
+    .footer {
+        .footertop {
+
+            .container2 {
+                
+                display: flex;
+                flex-wrap: wrap;
+                margin-right: -15px;
+                margin-left: -15px;
+                justify-content: space-between;
+
+                .waynefamily {
+                    box-sizing: border-box;
+                    width: 33.33333333%;
+                    padding-left: 15px;
+                    padding-right: 15px;
+                    
+                }
+
+                .usefullinks, .contacto, .newsletter {
+                    box-sizing: border-box;
+                    max-width: 25%;
+                    padding-left: 15px;
+                    padding-right: 15px;
+                    
+                } 
+
+                .socialbuttons {
+                    justify-content: flex-start;
+                }
+            }
+
+        }
+         
+
+    } 
+    
+}
