ahora solo queda copiar y pegar

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,6 +4,7 @@ body {
     font-family: $fuentegeneral;
     
     background-color: $fondo_oscuro; 
+    margin:0;
 
     a {
     text-decoration: none;
