--- a/estilo/all.css
+++ b/estilo/all.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #00428a;
+  margin: 0;
 }
 body a {
   text-decoration: none;
@@ -21,37 +22,47 @@ body a {
 }
 
 #team {
+  width: 100vw;
   height: 1000px;
-  background: #ecf5ff;
+  background: white;
 }
 #team header {
-  color: black;
+  padding: 50px 0px 50px 0px;
 }
 #team header h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 250%;
   text-align: center;
+  margin: 5px;
+  color: #283d50;
+  font-weight: 400;
 }
 #team header h2 {
   font-family: "Open Sans", sans-serif;
-  font-size: 90%;
+  font-size: 95%;
   font-weight: 400;
   text-align: center;
+  color: #556877;
+  line-height: 1.6;
 }
 #team .card01 {
   border-radius: 50%;
-  width: 350px;
-  height: 350px;
+  width: 330px;
+  height: 330px;
   background: url("../imagenes/team-01.jpg");
   margin: auto;
   transition: 0.5s ease-in;
   position: relative;
 }
+#team .card01:hover .text {
+  transform: translateY(15px);
+  opacity: 1;
+}
 #team .card01 .fondoazul {
   background: #004a99;
   border-radius: 50%;
-  width: 350px;
-  height: 350px;
+  width: 330px;
+  height: 330px;
   margin: auto;
   transition: 0.2s ease-in;
   opacity: 0;
@@ -60,32 +71,29 @@ body a {
   opacity: 0.6;
 }
 #team .card01 .text {
+  color: white;
   position: absolute;
   top: 130px;
   left: 115px;
-}
-#team .card01 .text .t01 {
+  opacity: 0;
+  transition: 0.2s ease-in;
   text-align: center;
-  color: white;
 }
-#team .card01 .text .t01 h1 {
+#team .card01 .text h1 {
   font-size: 110%;
   margin: auto;
 }
-#team .card01 .text .t01 h2 {
+#team .card01 .text h2 {
+  font-weight: 400;
   font-size: 70%;
 }
 #team .card01 .text .tredes {
   padding-top: 5px;
   text-align: center;
-  color: white;
 }
 #team .card01 .text .tredes i:hover {
   color: #007bff;
   cursor: pointer;
-  opacity: 1;
-}
-#team .card01 .text:hover {
   opacity: 1;
 }
 
