--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,6 +6,10 @@ $fondo_oscuro: #00428a;
 $fondo_claro: #ecf5ff;
 
 $acentos: #007bff;
+
+
+$subtitulo: #283d50;
+$textogris: #556877;
 /*---botones, links----*/
 
 $fuentegeneral: "Open Sans", sans-serif;
