--- a/sass/sections/_team06.scss
+++ b/sass/sections/_team06.scss
@@ -1,63 +1,71 @@
 #team{
+    width: 100vw;
     height: 1000px;
-    background: $fondo_claro;
+    background: white;
     header{
-        color:black;
+        padding: 50px 0px 50px 0px;
         h1{
             font-family: $fuentetitulos;
             font-size: 250%;
             text-align: center;
+            margin:5px;
+            color: $subtitulo;
+            font-weight: 400;
             
         }
         h2{
             font-family:$fuentegeneral;
-            font-size: 90%;
+            font-size: 95%;
             font-weight: 400;
             text-align: center;
+            color:$textogris;
+            line-height: 1.6;
+
         }
     }
     .card01{
         border-radius: 50%;
-        width: 350px;
-        height: 350px;
+        width: 330px;
+        height: 330px;
         background: url("../imagenes/team-01.jpg");
         margin:auto;
         transition: 0.5s ease-in;
-        position:relative;
-
+        position: relative;
+        &:hover .text{
+            transform: translateY(15px);
+            opacity:1;
+        }
         .fondoazul{
             background: $fondo;
             border-radius: 50%;
-            width: 350px;
-            height: 350px;
+            width: 330px;
+            height: 330px;
             margin:auto;
             transition: 0.2s ease-in;
             opacity:0;
-           
-            
             &:hover{
                 opacity:0.6;
             }
         }
         .text{
+            color:white;
             position:absolute;
             top: 130px;
             left:115px;
-            .t01{
-                text-align: center;
-                color:white;
+            opacity:0;
+            transition:0.2s ease-in;    
+            text-align: center;
                 h1{
                     font-size: 110%;
-                    margin:auto;
+                    margin:auto; 
                 }
                 h2{
+                    font-weight: 400;
                     font-size: 70%;
                 }
-            }
             .tredes{
                 padding-top:5px;
                 text-align: center;
-                color: white;
                 i{
                     &:hover{
                         color:$acentos;
@@ -66,10 +74,9 @@
                     }
                 }
             }
-            &:hover{
-              opacity:1;  
-            }
+            
         }
+    
         
         
             
