--- a/estilo/all.css
+++ b/estilo/all.css
@@ -3,6 +3,7 @@
 /* -------------------------------------------------------- */
 body {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
 }
 body a {
   text-decoration: none;
@@ -24,7 +25,8 @@ body a {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 600px;
+  height: auto;
+  padding-bottom: 30px;
 }
 #home img {
   padding: 50px 50px 0px 50px;
