--- a/sass/layout/_home02.scss
+++ b/sass/layout/_home02.scss
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 600px;
+    height: auto;
+    padding-bottom: 30px;
     img{
         padding: 50px 50px 0px 50px;
         height: auto;
