--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -3,6 +3,7 @@ body {
     font-family: $fuentegeneral;
     
     background-color: $fondo_oscuro; 
+    margin:0;
 
     a {
     text-decoration: none;
