--- a/sass/sections/_services04.scss
+++ b/sass/sections/_services04.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     background: $fondo_claro;
-    width: 87vw;
-    height: 2000px;
+    width: 100vw;
+    height: auto;
     .sub04{
         text-align: center;
         padding: 20px 5px 50px 5px;
