--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -5,7 +5,7 @@ body {
     font-family: $fuentegeneral;
     
     background-color: $fondo_oscuro; 
-
+    margin:0;
     a {
     text-decoration: none;
     color: $acentos;
