--- a/estilo/all.css
+++ b/estilo/all.css
@@ -1,17 +1,28 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 1 | @import 'sass/variables';
- *   |         ^^^^^^^^^^^^^^^^
- *   '
- *   sass\all.scss 1:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import 'sass/variables';\d\a   \2502          ^^^^^^^^^^^^^^^^\a   \2575 \a   sass\\all.scss 1:9  root stylesheet";
+/*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/
+/*---botones, links----*/
+/* -------------------------------------------------------- */
+body {
+  font-family: "Open Sans", sans-serif;
+  background-color: #00428a;
+  margin: 0;
 }
+body a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.fondoblanco {
+  background-color: white;
+  color: #00428a;
+}
+
+.fondoceleste {
+  background-color: #ecf5ff;
+  color: #00428a;
+}
+
+#our-clients {
+  background: pink;
+}
+
+/*# sourceMappingURL=all.css.map */
