--- a/sass/all.scss
+++ b/sass/all.scss
@@ -1,10 +1,11 @@
-@import 'sass/variables';
-@import 'sass/main';
-@import './sass/layout/nav01';
-@import './sass/layout/home02';
-@import './sass/layout/footer08';
-@import './sass/sections/aboutus03';
-@import './sass/sections/services04';
-@import './sass/sections/porftolio05';
-@import './sass/sections/team06';
-@import './sass/sections/dropdown07';
+@import 'variables';
+@import 'main';
+@import 'layout/nav01';
+@import 'layout/home02';
+@import 'layout/footer08';
+@import 'sections/aboutus03';
+@import 'sections/services04';
+@import 'sections/porftolio05';
+@import 'sections/team06';
+@import 'sections/dropdown07';
+@import 'sections/ourclients';
