--- a/estilo/all.css
+++ b/estilo/all.css
@@ -22,7 +22,50 @@ body a {
 }
 
 #our-clients {
-  background: pink;
+  background: #ecf5ff;
+  width: 100vw;
+  height: auto;
+  margin: 0;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#our-clients header {
+  width: 90vw;
+}
+#our-clients header h1 {
+  color: #283d50;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  margin: 0px 0px 15px 0px;
+}
+#our-clients header h2 {
+  color: #556877;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  margin: 0;
+}
+#our-clients .clientes {
+  background: white;
+  width: 90vw;
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+}
+#our-clients .clientes img {
+  width: 50vw;
+  align-self: center;
+  transition: 0.5s ease-in;
+}
+#our-clients .clientes img:hover .clientes {
+  transform: scale(1.2);
 }
 
 /*# sourceMappingURL=all.css.map */
