--- a/sass/sections/ourclients.scss
+++ b/sass/sections/ourclients.scss
@@ -1,3 +1,51 @@
 #our-clients{
-    background:pink;
+    background: $fondo_claro;
+    width: 100vw;
+    height: auto;
+    margin:0;
+    padding-bottom: 50px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    header{
+        
+        width: 90vw;
+        
+        h1{
+            color: $colortitulo;
+            text-align: center;
+            letter-spacing: 1px; 
+            font-weight: 600;
+            font-family: $fuentetitulos;
+            font-size: 36px;
+            margin:0px 0px 15px 0px;
+        }
+        h2{
+            color:$colorgeneral;
+            font-weight: 400;
+            font-family: $fuentegeneral;
+            font-size: 15px;
+            text-align: center;
+            margin: 0; 
+        }
+    }
+    .clientes{
+        background: white;
+        width: 90vw;
+        height: 15vh;
+        display:flex;
+        justify-content: center;
+        img{
+            width:50vw;
+            align-self: center;
+            
+            transition: 0.5s ease-in;
+            &:hover .clientes{
+                transform: scale(1.2);  
+            }
+        }
+
+    }    
 }
