--- a/sass/sections/_ourclients.scss
+++ b/sass/sections/_ourclients.scss
@@ -3,6 +3,7 @@
     width: 100vw;
     height: auto;
     margin:0;
+    padding-top: 50px;
     padding-bottom: 50px;
 
     display: flex;
@@ -10,8 +11,8 @@
     align-items: center;
     justify-content: center;
     header{
-        
         width: 90vw;
+        padding-bottom: 50px;
         
         h1{
             color: $colortitulo;
@@ -37,14 +38,14 @@
         height: 15vh;
         display:flex;
         justify-content: center;
+        border: 1px solid #d6eaff;
+        &:hover img{
+            transform: scale(1.2); 
+        }
         img{
             width:50vw;
             align-self: center;
-            
-            transition: 0.5s ease-in;
-            &:hover .clientes{
-                transform: scale(1.2);  
-            }
+            transition: 0.3s ease-in;
         }
 
     }    
