terminada version mobile

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,6 +6,9 @@ $fondo_oscuro: #00428a;
 $fondo_claro: #ecf5ff;
 
 $acentos: #007bff;
+
+$colortitulo: #283d50;
+
 /*---botones, links----*/
 
 $fuentegeneral: "Open Sans", sans-serif;
