--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,10 +1,11 @@
 /* -------------------------------------------------------- */
-@import 'sass/all';
+
 
 body {
     font-family: $fuentegeneral;
     
     background-color: $fondo_oscuro; 
+    margin:0;
 
     a {
     text-decoration: none;
