--- a/sass/sections/_contactus.scss
+++ b/sass/sections/_contactus.scss
@@ -38,7 +38,7 @@
                 padding-right: 10px;
                 display:flex;
                 align-self: center;
-                color: $fondo; 
+                color: $acentos; 
                 font-size: 30px;
             }
         }
