--- a/estilo/all.css
+++ b/estilo/all.css
@@ -1,98 +1,21 @@
-/*----se usa solo en el body, la parte de copyright tiene fondo transparente y se ve este color ---*/
-/*---botones, links----*/
-/* -------------------------------------------------------- */
-body {
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-}
-body a {
-  text-decoration: none;
-  color: #007bff;
-}
+/* Error: Undefined mixin.
+ *    ,
+ * 77 | / @include desktop{
+ * 78 | |     #home{
+ * 79 | |         width:700px; 
+ * 80 | |     }
+ * 81 | \ }
+ *    '
+ *   sass\layout\_home02.scss 77:1  @import
+ *   sass\all.scss 4:9              root stylesheet */
 
-.fondoblanco {
-  background-color: white;
-  color: #1445b3;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined mixin.\a    \2577 \a 77 \2502  \250c  @include desktop{\a 78 \2502  \2502      #home{\a 79 \2502  \2502          width:700px; \a 80 \2502  \2502      }\a 81 \2502  \2514  }\a    \2575 \a   sass\\layout\\_home02.scss 77:1  @import\a   sass\\all.scss 4:9              root stylesheet";
 }
-
-.fondoceleste {
-  background-color: #ecf5ff;
-  color: #1445b3;
-}
-
-#home {
-  background: #1445b3;
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: auto;
-  padding-bottom: 30px;
-}
-#home img {
-  padding: 50px 50px 0px 50px;
-  height: auto;
-  width: 80vw;
-}
-#home h1 {
-  font-family: "Montserrat", sans-serif;
-  color: white;
-  text-align: center;
-  font-size: 188%;
-  font-weight: bolder;
-}
-#home .solutions {
-  color: #74b5fc;
-  text-decoration: underline;
-}
-#home .button-get-started {
-  display: flex;
-  justify-content: center;
-}
-#home .button-get-started button {
-  display: flex;
-  flex-direction: center;
-  justify-content: center;
-  margin-top: 25px;
-  border: solid #007bff 1px;
-  border-radius: 56px 56px 56px 56px;
-  background-color: #007bff;
-  color: white;
-  font-size: 49%;
-  width: 144px;
-  height: 45px;
-  font-weight: 700;
-  letter-spacing: 1px;
-  transition: background-color 0.3s linear;
-}
-#home .button-get-started button:hover {
-  cursor: pointer;
-  background-color: #1445b3;
-  border: solid white 2px;
-}
-#home .button-our-services {
-  display: flex;
-  justify-content: center;
-}
-#home .button-our-services button {
-  display: flex;
-  flex-direction: center;
-  justify-content: center;
-  margin-top: 25px;
-  border: solid white 2px;
-  border-radius: 56px 56px 56px 56px;
-  background-color: #1445b3;
-  color: white;
-  font-size: 49%;
-  width: 144px;
-  height: 45px;
-  font-weight: 700;
-  letter-spacing: 1px;
-  transition: background-color 0.3s linear;
-}
-#home .button-our-services button:hover {
-  cursor: pointer;
-  background-color: #007bff;
-  border: solid #007bff;
-}
-
-/*# sourceMappingURL=all.css.map */
