--- a/sass/layout/_home02.scss
+++ b/sass/layout/_home02.scss
@@ -74,8 +74,9 @@
                 
 }
 
-@include desktop{
+@include desktop {
     #home{
-        width:700px; 
+    
+        flex-direction: row;
     }
 }
