Terminando detalles del nav mobile

--- a/estilo.css
+++ b/estilo.css
@@ -227,15 +227,55 @@ body h4 {
   font-size: 24px;
   transition: all 0.4s;
   text-align: right;
+  display: block;
 }
 .togglemenu .fa-bars {
   margin: 18px 18px 0 0;
   color: #004289;
 }
-.togglemenu:hover ~ .navmenu-mobile {
+
+#openmenu {
+  display: none;
+}
+#openmenu:checked ~ .navmenu-mobile {
   left: 0;
 }
-.togglemenu:hover ~ .navmenu-mobile-overlay {
+#openmenu:checked ~ .navmenu-mobile-overlay {
+  display: block;
+}
+#openmenu:checked ~ .closemenuIcon {
+  display: block;
+}
+#openmenu:checked*.togglemenu {
+  display: none;
+}
+
+.closemenuIcon {
+  position: fixed;
+  right: 0;
+  top: 0;
+  font-size: 24px;
+  z-index: 9999;
+  display: none;
+}
+.closemenuIcon .fa-times {
+  color: white;
+  margin: 18px 18px 0 0;
+}
+
+#closemenu {
+  display: none;
+}
+#closemenu:checked ~ .navmenu-mobile {
+  left: -260px;
+}
+#closemenu:checked ~ .navmenu-mobile-overlay {
+  display: none;
+}
+#closemenu:checked ~ .closemenuIcon {
+  display: none;
+}
+#closemenu:checked *.togglemenu {
   display: block;
 }
 
