--- a/sass/layout/_nav01.scss
+++ b/sass/layout/_nav01.scss
@@ -138,7 +138,7 @@
 
     }
 
-    &:checked*.togglemenu{
+    &:checked ~.togglemenu{
         display:none;
     }
 
@@ -175,7 +175,7 @@
 
     }
 
-    &:checked *.togglemenu{
+    &:checked .togglemenu{
         display: block;
 
     }
